speculation and filtering

--- a/bib1.bib
+++ b/bib1.bib
@@ -547,3 +547,14 @@
 }
 
 
+@article{savgol,
+	author = "Savitzky, A. and Golay, M. J. E",
+	journal = "Anal. Chem., 36, 1627-1639",
+	title = "{Smoothing and differentiation of data by simplified least squares procedures}",
+	year = "1964"
+}
+
+
+
+
+
