--- a/mythesis.tex
+++ b/mythesis.tex
@@ -734,7 +734,7 @@ Equation (\ref{eq:cossigma2}) is useful since we need to know the emission angle
 
 \subsubsection{Light bending}
 
-Before we can get the angle $\sigma$ from equation (\ref{eq:cossigma2}) we also first need to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ (for every point at every phase) we know directly from the geometry since we can calculate them using equation (\ref{eq:psi2}). In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6), we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
+Before we can get the angle $\sigma$ from equation (\ref{eq:cossigma2}), we also first need to know how to get the angle $\alpha$ when we know the light bending angle $\psi$. The angles $\psi$ (for every point at every phase) we know directly from the geometry since we can calculate them using equation (\ref{eq:psi2}). In case of non-infinitesimal spot (which is discussed more in the Section 2.1.6), we of course need a  transformation of coordinates between the spot frame and the frame of the star (to get corresponding $\theta$ and $\phi$ for every point inside the spot). The angle $\psi$ is anyway straight determined since we are going to calculate the trajectories for only those photons which are going to arrive at the observer (not in some other direction). The task is now to find out the true emission angle $\alpha$ using general relativity. 
 
 The exact relation between $\alpha$ and $\psi$ (when $\alpha < \pi/2$) in Schwarzschild geometry (i.e., light bending) is given by \cite{mtw}%(e.g. Misner {\it et al}. 1973 \cite{mtw}) %\citep[e.g.][]{mtw73}
 \be \label{eq:bend2}
@@ -1247,7 +1247,7 @@ In our simulations we see how the two datasets with different $i-\thetas$ soluti
       Mass $M$ & $1.5 ~\msun$  \\ %\hline
       Inclination $i$ & $5 \degree$ or $75 \degree$ \\ %\hline
       Spot colatitude $\thetas$ & $75 \degree$ or $5 \degree$ \\ %\hline
-      Spot angular size $\rho$ & $10.0 \degree$  \\ %\hline
+      Spot angular size $\rho$ & $10 \degree$  \\ %\hline
       Distance $D$ & $2.5$ kpc \\ %\hline
       Temperature $T_{\mathrm{eff}}$ & $2.0$ keV \\
 
@@ -1338,9 +1338,15 @@ Other prior probabilities of the parameters are kept always uniform inside their
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Before obtaining the final posterior probability distributions we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble. Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
+Before obtaining the final posterior probability distributions, we have reduced the burn-in phase from each ensemble by removing the first $20,000$ samples from each chain. After that we still have approximately $50,000$ samples left belonging to each ensemble. Figure \ref{fig:wexample} shows one example of the log-likelihoods of a converged chain in one of the simulations. In that Figure we use an averaged step of ensemble which is an average of $20$ (number of walkers in the ensemble) consecutive single accepted steps. However, for many ensembles we found few walkers which didn't seem to achieve convergence even after a long time (they appeared as sharp peaks in the log-likelihood plots).
 
 The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
+
+Since MCMC methods contain always noise, we have used digital filtering to reduce it from our posterior probability distributions. One-dimensional histograms have been smoothed using a Savintzky-Golay filter \cite{savgol}.
+It is a method to increase the signal-to-noise ratio without largely distorting the signal... %...
+
+% applied to a set of digital data points for the purpose of smoothing the data, that is, to increase the signal-to-noise ratio without greatly distorting the signal. This is achieved, in a process known as convolution, by fitting successive sub-sets of adjacent data points with a low-degree polynomial by the method of linear least squares. When the data points are equally spaced, an analytical solution to the least-squares equations can be found, in the form of a single set of "convolution coefficients" that can be applied to all data sub-sets, to give estimates of the smoothed signal, (or derivatives of the smoothed signal) at the central point of each sub-set. 
+
 
 The results of our samplings are presented in Figures \ref{fig:polpost}-\ref{fig:eqpostpr}. From these posterior probability distributions we can easily see how the prior information of angles $\thetas$ and $i$ improves the fits of the mass and radius of the neutron star (by comparing Figures \ref{fig:polpostpr} and \ref{fig:polpost} or Figures \ref{fig:eqpostpr} and \ref{fig:eqpost}). However, the correct ratio between mass and radius (and thus the gravitational redshift) seems to be in every case well found.
 
@@ -1352,7 +1358,10 @@ The $68 \%$ credible limits are only slightly more compact giving $3.4 \degree$ 
 In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr} and \ref{fig:eqpostpr}), we find the correct solutions for $\thetas$ and $i$ because our prior distributions are centered around the correct values. %even though our prior distributions are not centered  around the correct values. 
 In case of the polar spot, $\thetas$ is now between $3.2 \degree$ and $10 \degree$ with a $95 \%$ probability, and $i$ is larger than $61 \degree$ with a $68 \%$ probability. In case of the equatorial spot, $i$ is between $2.5 \degree$ and $13 \degree$ with a $95 \%$ probability, and $\thetas$ is larger than $60 \degree$ with a $68 \%$ probability. In both cases the most probable values are close to the correct values (see the Table \ref{table:conflimits}), especially for the smaller one of the angles. The posterior probability distribution for the larger angle is almost entirely determined by the assumed prior probability distribution.  
 
-The non-uniform priors for $\thetas$ and $i$ have also a strong effect on the posterior probability distributions for the mass and the radius. They are now also limited on both sides of the correct values having the maximum near the correct value. The prior information shifts the probability densities of mass and radius towards higher masses and radii, since the incorrect $\thetas - i$ solutions are in this case not contributing to the small masses and radii so strongly. Most importantly both the lower and upper limits can now be determined. In case of the polar spot, the radius (correct value $12.0$ km) is between $9.62$ km and $13.4$ km, and the mass (correct value $1.5 ~\msun$) is between $1.2 ~\msun$ and $1.7 ~\msun$, with $68 \%$ probabilities. The most probable values are $11.6$ km and $1.4 ~\msun$. In case of the equatorial spot and with same the credible limits, the radius is between $9.39$ km and $13.3$ km, and the mass is between $1.2 ~\msun$ and $1.7 ~\msun$. The most probable values are $10.9$ km and $1.4 ~\msun$. 
+The non-uniform priors for $\thetas$ and $i$ have also a strong effect on the posterior probability distributions for the mass and the radius. They are now also limited on both sides of the correct values having the maximum near the correct value. The prior information shifts the probability densities of mass and radius towards higher masses and radii, since the incorrect $\thetas - i$ solutions are in this case not contributing to the small masses and radii so strongly. %For some reason, the intermediate solutions for $i$ and $\thetas$ (where neither $i$ or $\thetas$ is very large or small) seemed to favour small radii and masses, when the priors were not applied. 
+It is not very clear why the intermediate solutions for $i$ and $\thetas$, where either $i$ or $\thetas$ is not particularly large or small, seem to favour small radii and masses. The incorrect solution in $\thetas$ might be compensated with a smaller $\req$ and thus also with a smaller mass, since the ratio between mass and radius is well constrained. 
+
+Most importantly, in case of non-uniform priors, both the lower and upper limits for mass and radius can now be determined. In case of the polar spot, the radius (correct value $12.0$ km) is between $9.62$ km and $13.4$ km, and the mass (correct value $1.5 ~\msun$) is between $1.2 ~\msun$ and $1.7 ~\msun$, with $68 \%$ probabilities. The most probable values are $11.6$ km and $1.4 ~\msun$. In case of the equatorial spot and with same the credible limits, the radius is between $9.39$ km and $13.3$ km, and the mass is between $1.2 ~\msun$ and $1.7 ~\msun$. The most probable values are $10.9$ km and $1.4 ~\msun$. 
 
 The angular size of the spot $\rho$ is found to be the closest to the correct value from all the  parameters in our sampling. The highest probability density is very close to $10 \degree$ ($\rho$ is between $6.5 \degree$ and $14 \degree$ at least with a $95 \%$ probability in every simulation) which is the value used when creating the datasets. Partly this is due to the choice to sample the distance in a quite small interval (between $2.0$ and $3.0$ kpc). The distance is not constrained, and that causes problems with a larger interval. A uniform posterior probability distribution for the distance is obtained using the narrow limits. For this reason the size of the spot cannot change very much in order to keep the observed count rate at a correct level.
 
